--- a/style.css
+++ b/style.css
@@ -1,4 +1,9 @@
-header {
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+.header {
   display: flex;
   background-color: rgb(50, 167, 145);
 }
