--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@
   padding: 0;
   box-sizing: border-box;
 }
+
 .header {
   display: flex;
   background-color: rgb(50, 167, 145);
@@ -12,4 +13,24 @@
 
 .trybewarts-login {
   display: flex;
+}
+
+main {
+  display: flex;
+}
+
+#evaluation-form {
+  display: flex;
+  width: 675px;
+  flex-direction: column;
+}
+
+#trybewarts-forms-logo {
+  height: 500px;
+}
+
+div #forms-e-logo {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
 }
