--- a/style.css
+++ b/style.css
@@ -17,20 +17,16 @@
 
 main {
   display: flex;
+  justify-content: space-between;
 }
 
 #evaluation-form {
   display: flex;
   width: 675px;
   flex-direction: column;
+  justify-content: center;
 }
 
 #trybewarts-forms-logo {
-  height: 500px;
-}
-
-div #forms-e-logo {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
+  margin-right: 100px;
 }
